try to fix "Punkt hinzufügen" visual bug on mobile -v12

--- a/src/app/admin-components/bugapoint-management/bugapointmenu/bugapointmenu.component.css
+++ b/src/app/admin-components/bugapoint-management/bugapointmenu/bugapointmenu.component.css
@@ -13,5 +13,5 @@ button {
 }
 
 #bugapointmenu {
-  height: auto;
+  height: calc(100vh - 200px) !important;
 }
